# dross-manager

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
dross-manager-frontend/: README.md  index.html  package-lock.json  package.json
dross-manager-frontend/src/: App.vue  main.js  router.js
dross-manager-frontend/src/components/: Faeries.vue  FaeryAdd.vue  FaeryDetail.vue  FaeryEdit.vue  FaeryList.vue
dross-manager-frontend/src/services/: FaeryDataService.js
public_html/: index.html
src/: dross.rs  email.rs  endpoints.rs  faery.rs  main.rs  middleware.rs  migrations.rs  player.rs  prelude.rs  repository.rs  service.rs  session.rs  sql.rs  version.rs
src/auth/: jwt.rs
src/endpoints/: auth.rs  faery.rs  mod.rs
src/repository/: email.rs  faery.rs  mod.rs  player.rs  session.rs
