[package]
name = "dross-manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
libsql = { git = "https://github.com/tursodatabase/libsql" }
serde = { version = "1.0.196", features = ["derive"] }
shuttle-axum = { version = "0.39.0" }
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
shuttle-turso = "0.39.0"
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
tokio = "1.36.0"
futures = "0.3.30"
http = "1.0.0"
bytes = "1.5.0"
tower = "0.4.13"
log = "0.4.20"
